# tf_1612_pack

openwrt/: .config  feeds.conf.default
openwrt/realtek/dts-5.15/: rtl8380_tfortis_psw-2g8f.dts
openwrt/realtek/image/: rtl838x.mk
tf_pack/: .gitignore
tf_pack/dmhash/: Makefile
tf_pack/dmhash/src/: Makefile  main.c
tf_pack/i2c_test/: Makefile
tf_pack/i2c_test/src/: Makefile  i2c_test.c  registers.h
tf_pack/jsonLibLua/: Makefile
tf_pack/luci/applications/luci-app-nginx/: Makefile
tf_pack/luci/applications/luci-app-tfortis-8021x/: Makefile
tf_pack/luci/applications/luci-app-tfortis-help/: Makefile
tf_pack/luci/applications/luci-app-tfortis-igmp/: Makefile
tf_pack/luci/applications/luci-app-tfortis-mac/: Makefile
tf_pack/luci/applications/luci-app-tfortis-smtp/: Makefile
tf_pack/luci/applications/luci-app-uhttpd/po/ar/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/bg/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/bn_BD/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/ca/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/cs/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/da/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/de/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/el/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/en/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/es/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/fi/: uhttpd.po
tf_pack/luci/applications/luci-app-uhttpd/po/fr/: uhttpd.po
tf_pack/luci/applications/luci-mod-status/: Makefile
tf_pack/luci/collections/luci-nginx/: Makefile
tf_pack/luci/collections/luci-ssl-nginx/: Makefile
tf_pack/luci/modules/luci-base/ucode/: dispatcher.uc
tf_pack/luci/modules/luci-mod-tfortis-port/: Makefile
tf_pack/luci/themes/luci-theme-tfortis/: Makefile
tf_pack/realtek-poe-tfortis/src/: main.c
tf_pack/syslog_fc/src/src/: syslog_entry.c
tf_pack/tf_ar_poe/: Makefile
tf_pack/tf_ar_poe/files/etc/config/: tf_autorestart
tf_pack/tf_ar_poe/files/etc/init.d/: tf_autorestart
tf_pack/tf_ar_poe/lib/socket_lib/: socket_module.c  socket_module.h
tf_pack/tf_ar_poe/lib/thread_lib/: thread_module.c  thread_module.h
tf_pack/tf_ar_poe/lib/utils_lib/: utils_module.c  utils_module.h
tf_pack/tf_ar_poe/src/: CMakeLists.txt  global_includs.h
tf_pack/tf_ar_poe/src/autorestart_ctrl/: ar_main_ctrl.c  client_module.c  client_module.h  parsing_command.c  parsing_command.h
tf_pack/tf_ar_poe/src/autorestartd/: ar_mainApp.c  ar_mainApp.h  ar_maind.c  ar_maind.h  client_module.c  client_module.h  events_module.c  events_module.h  init_module.c  init_module.h  ping.c  ping.h  port_module.c  port_module.h  test_module.c  test_module.h
tf_pack/tf_clish/: Makefile
tf_pack/tf_device_monitor/: Makefile
tf_pack/tf_device_monitor/files/etc/: dmhash
tf_pack/tf_device_monitor/files/etc/config/: tf_device_monitor
tf_pack/tf_device_monitor/files/etc/init.d/: tf_device_monitor
tf_pack/tf_device_monitor/files/etc/tf_device_monitor_scripts/: getBoardInfo.lua  getMngtDevice.lua  getNetData.lua  getNetDeviceInfo.lua  getSystemInfo.lua  get_model_info.lua  get_network_info.lua  user_handler.lua
tf_pack/tf_device_monitor/src/: CMakeLists.txt  dm_mainHeader.h  main.c  net_utils.c  net_utils.h  parsing.c  parsing.h  run_CLIcmd.c  run_CLIcmd.h  settings_module.c  state_handler.c  state_handler.h  version.h
tf_pack/tf_dts/: rtl8380_tfortis_psw-2g8f.dts
tf_pack/tf_file/: Makefile
tf_pack/tf_file/files/etc/: shells
tf_pack/tf_file/files/etc/config/: luci  network  snmpd  system
tf_pack/tf_file/files/etc/init.d/: lldpd  rsyslog  snmpd  sysfixtime
tf_pack/tf_hwsys/: Makefile
tf_pack/tf_hwsys/files/etc/init.d/: tf_hwsysd
tf_pack/tf_hwsys/lib/events_lib/: events_handlers.c  events_handlers.h
tf_pack/tf_hwsys/lib/gpio_lib/: gpio_module.c  gpio_module.h
tf_pack/tf_hwsys/lib/i2c_lib/: i2c_module.c  i2c_module.h
tf_pack/tf_hwsys/lib/socket_lib/: socket_module.c
tf_pack/tf_hwsys/lib/thread_lib/: thread_module.c
tf_pack/tf_hwsys/lib/utils_lib/: utils_module.c  utils_module.h
tf_pack/tf_hwsys/src/: CMakeLists.txt
tf_pack/tf_hwsys/src/hwsys_ctrl/: hwsys_ctrl.c  hwsys_ctrl.h
tf_pack/tf_hwsys/src/hwsysd/: client_comm.c  global_include.h  hwsysd.c  hwsysd.h  main_app.c  main_app.h
tf_pack/tf_statistics/: Makefile
tf_pack/tf_testPcap/: Makefile
tf_pack/tf_trk_test/: Makefile
tf_pack/tf_trk_test/sdk/: CMakeLists.txt
tf_pack/tf_trk_test/sdk/include/common/: rt_error.h  rt_type.h
tf_pack/tf_trk_test/sdk/include/common/hal/chipdef/: chip.h  chipdef.h
tf_pack/tf_trk_test/sdk/include/common/util/: rt_bitop.h
tf_pack/tf_trk_test/sdk/include/dal/: dal_mapper.h  dal_mgmt.h
tf_pack/tf_trk_test/sdk/include/dal/rtrpc/: rtrpc_diag.h  rtrpc_msg.h
tf_pack/tf_trk_test/sdk/include/rtk/: phy.h  sds.h  time.h
tf_pack/tf_trk_test/sdk/src/: main.c
tf_pack/tf_trk_test/sdk/src/dal/rtrpc/: rtrpc_diag.c  rtrpc_msg.c
tf_pack/tf_trk_test/sdk/system/: osal.c
tf_pack/tf_trk_test/sdk/system/include/common/: error.h  type.h
tf_pack/tf_trk_test/sdk/system/include/common/debug/: rt_log.h
tf_pack/tf_trk_test/sdk/system/include/osal/: lib.h  memory.h  print.h  sem.h  time.h
tf_pack/tf_trk_test/sdk/system/rtdrv/: rtdrv_netfilter.c  rtdrv_netfilter.h
(+250 files in other folders)
